# infotecs-cxx

./: .gitignore  CMakeLists.txt
common/: data-processor.cpp  data-processor.h  socket.cpp  socket.h
first-prog/: CMakeLists.txt
first-prog/src/: data-processor.h  main.cpp  producer.cpp  producer.h  shared-buffer.cpp  shared-buffer.h
sec-prog/: CMakeLists.txt
sec-prog/src/: consumer.cpp  consumer.h  main.cpp
